--- a/config/actuallyadditions.cfg
+++ b/config/actuallyadditions.cfg
@@ -428,6 +428,7 @@
 "machine values" {
     # By default, the Item Repairer only repairs items which are repairable in an anvil. Add an item's REGISTRY NAME here if you want it to be repairable.
     S:"Item Repairer Extra Whitelist" <
+        immersiveengineering:drillhead
         tconstruct:pickaxe
         tconstruct:shovel
         tconstruct:hatchet
